log/build_2021-03-21_15-30-10/main_package/stderr.log
  File "/home/jordy/ku_turtlebot/install/main_package/lib/python3.8/site-packages/main_package/webcam_stream.py", line 25
    if(!self.cam.isOpened()):
       ^
SyntaxError: invalid syntax

